force-app/main/default/objects/Case/fields/Billable_Time__c.field-meta.xml
<CustomField>
    <fullName>Billable_Time__c</fullName>
    <description>Record upon closing the total billable time</description>
    <inlineHelpText>Record the total number of hours to be billed to customer for this help</inlineHelpText>
    <label>Billable Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>