force-app/main/default/objects/Case/fields/Cross_Connect_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Cross_Connect_Email_Content__c</fullName>
    <description>Temporary field populated in flow to include cross connect details on email notifications.</description>
    <label>Cross Connect Email Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>