force-app/main/default/objects/Case/fields/DX_Access_For__c.field-meta.xml
<CustomField>
    <fullName>DX_Access_For__c</fullName>
    <label>Access For?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Building Access (non-badge holder only)</fullName>
            </value>
            <value>
                <fullName>Data Center Access(both badge and non-badge holders)</fullName>
            </value>
            <value>
                <fullName>Parking Garage (badge holders only)</fullName>
            </value>
            <value>
                <fullName>Loading Dock/ Freight Access</fullName>
            </value>
            <value>
                <fullName>MMR Access (non-badge only)</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>Shaft</fullName>
            </value>
            <value>
                <fullName>POE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>