force-app/main/default/objects/Case/fields/DX_Acconting_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Acconting_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Billing Email</fullName>
            </value>
            <value>
                <fullName>Update Address</fullName>
            </value>
            <value>
                <fullName>Update Contact Info</fullName>
            </value>
            <value>
                <fullName>Update PO #</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>