force-app/main/default/objects/Case/fields/DX_Account_Name_Initiator_Information__c.field-meta.xml
<CustomField>
    <fullName>DX_Account_Name_Initiator_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests (Account Name)</relationshipLabel>
    <relationshipName>Service_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>