force-app/main/default/objects/Case/fields/DX_Account_Name_ZLOA__c.field-meta.xml
<CustomField>
    <fullName>DX_Account_Name_ZLOA__c</fullName>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>