force-app/main/default/objects/Case/fields/DX_Add_Remove__c.field-meta.xml
<CustomField>
    <fullName>DX_Add_Remove__c</fullName>
    <label>Add/Remove</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>