force-app/main/default/objects/Case/fields/DX_Added_Guest_Info__c.field-meta.xml
<CustomField>
    <fullName>DX_Added_Guest_Info__c</fullName>
    <inlineHelpText>If more than one guests add there information here:</inlineHelpText>
    <label>Additional Guest Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>