force-app/main/default/objects/Case/fields/DX_Additional_Guests__c.field-meta.xml
<CustomField>
    <fullName>DX_Additional_Guests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Guests</label>
    <type>Checkbox</type>
</CustomField>