force-app/main/default/objects/Case/fields/DX_Admin_Level_User__c.field-meta.xml
<CustomField>
    <fullName>DX_Admin_Level_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Level User</label>
    <type>Checkbox</type>
</CustomField>