force-app/main/default/objects/Case/fields/DX_After_Hours__c.field-meta.xml
<CustomField>
    <fullName>DX_After_Hours__c</fullName>
    <inlineHelpText>If Yes: Some sites may require scheduling for after hour access.</inlineHelpText>
    <label>After Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>