force-app/main/default/objects/Case/fields/DX_Amazon_Code__c.field-meta.xml
<CustomField>
    <fullName>DX_Amazon_Code__c</fullName>
    <label>Amazon Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>