force-app/main/default/objects/Case/fields/DX_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Arrival_Date__c</fullName>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>