force-app/main/default/objects/Case/fields/DX_Assets__c.field-meta.xml
<CustomField>
    <fullName>DX_Assets__c</fullName>
    <label>Asset(s)</label>
    <type>TextArea</type>
</CustomField>