force-app/main/default/objects/Case/fields/DX_Authorize_3rd_Party_Access__c.field-meta.xml
<CustomField>
    <fullName>DX_Authorize_3rd_Party_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorize 3rd Party Access</label>
    <type>Checkbox</type>
</CustomField>