force-app/main/default/objects/Case/fields/DX_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Billing_Account_Number__c</fullName>
    <inlineHelpText>Your billing Account number is located at top right of your invoice (which starts with &quot;M&quot;)</inlineHelpText>
    <label>Billing Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>