force-app/main/default/objects/Case/fields/DX_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>DX_Case_Number__c</fullName>
    <label>Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>