force-app/main/default/objects/Case/fields/DX_Category__c.field-meta.xml
<CustomField>
    <fullName>DX_Category__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>