force-app/main/default/objects/Case/fields/DX_Comments__c.field-meta.xml
<CustomField>
    <fullName>DX_Comments__c</fullName>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>