force-app/main/default/objects/Case/fields/DX_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Completion_Date__c</fullName>
    <formula>IF(ISPICKVAL(Status,&quot;Resolved&quot;),TODAY(), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>