force-app/main/default/objects/Case/fields/DX_Conditions__c.field-meta.xml
<CustomField>
    <fullName>DX_Conditions__c</fullName>
    <formula>&quot;By clicking accept, Customer acknowledges that certain fees may apply, as prescribed in the Customer Handbook, and payment shall be made in accordance with the terms of the Agreement with Licensor.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conditions</label>
    <type>Text</type>
</CustomField>