force-app/main/default/objects/Case/fields/DX_Connector_Type_Order_Initiator__c.field-meta.xml
<CustomField>
    <fullName>DX_Connector_Type_Order_Initiator__c</fullName>
    <label>Connector Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>