force-app/main/default/objects/Case/fields/DX_Contact__c.field-meta.xml
<CustomField>
    <fullName>DX_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests (Contact)</relationshipLabel>
    <relationshipName>Service_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>