force-app/main/default/objects/Case/fields/DX_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>DX_Contract_Term__c</fullName>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>