force-app/main/default/objects/Case/fields/DX_CRN_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_CRN_Date__c</fullName>
    <label>CRN Date</label>
    <type>Date</type>
</CustomField>