force-app/main/default/objects/Case/fields/DX_Cross_Connect_ID__c.field-meta.xml
<CustomField>
    <fullName>DX_Cross_Connect_ID__c</fullName>
    <label>Cross Connect ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>