force-app/main/default/objects/Case/fields/DX_Current_Location_Onsite__c.field-meta.xml
<CustomField>
    <fullName>DX_Current_Location_Onsite__c</fullName>
    <label>Current Location Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Being held in Secured Storage</fullName>
            </value>
            <value>
                <fullName>Within my Cabinet/Cage/Suite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>