force-app/main/default/objects/Case/fields/DX_Customer__c.field-meta.xml
<CustomField>
    <fullName>DX_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests (Customer)</relationshipLabel>
    <relationshipName>Service_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>