force-app/main/default/objects/Case/fields/DX_Customer_Provide_Liftgate__c.field-meta.xml
<CustomField>
    <fullName>DX_Customer_Provide_Liftgate__c</fullName>
    <inlineHelpText>Certain sites have restrictions on Pallet/ Freight, Cabinet deliveries, please provide additional information</inlineHelpText>
    <label>Customer to Provide Liftgate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>