force-app/main/default/objects/Case/fields/DX_Date_of_Disconnect__c.field-meta.xml
<CustomField>
    <fullName>DX_Date_of_Disconnect__c</fullName>
    <label>Date of Disconnect</label>
    <type>Date</type>
</CustomField>