force-app/main/default/objects/Case/fields/DX_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>DX_Date_Range__c</fullName>
    <label>Date Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last 3 months</fullName>
            </value>
            <value>
                <fullName>Last 6 months</fullName>
            </value>
            <value>
                <fullName>Last 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>