force-app/main/default/objects/Case/fields/DX_Default_Account__c.field-meta.xml
<CustomField>
    <fullName>DX_Default_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>