force-app/main/default/objects/Case/fields/DX_Delivery_Site__c.field-meta.xml
<CustomField>
    <fullName>DX_Delivery_Site__c</fullName>
    <label>Delivery Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Indy 733</fullName>
            </value>
            <value>
                <fullName>KC(1102 Grand)</fullName>
            </value>
            <value>
                <fullName>KS7801</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>STL210</fullName>
            </value>
            <value>
                <fullName>STL900</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>