force-app/main/default/objects/Case/fields/DX_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Departure_Date__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>