force-app/main/default/objects/Case/fields/DX_Disconnect_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Disconnect_Type__c</fullName>
    <label>Disconnect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Disconnect</fullName>
            </value>
            <value>
                <fullName>Partial Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>