force-app/main/default/objects/Case/fields/DX_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_Document_Name__c</fullName>
    <inlineHelpText>Please provide the name of the document that you&apos;re looking for</inlineHelpText>
    <label>Document Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>