force-app/main/default/objects/Case/fields/DX_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Order</fullName>
            </value>
            <value>
                <fullName>Customer Ready Notice</fullName>
            </value>
            <value>
                <fullName>Master Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>