force-app/main/default/objects/Case/fields/DX_Emergency_Notifications__c.field-meta.xml
<CustomField>
    <fullName>DX_Emergency_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Notifications</label>
    <type>Checkbox</type>
</CustomField>