force-app/main/default/objects/Case/fields/DX_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>DX_Equipment_ID__c</fullName>
    <label>Equipment ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>