force-app/main/default/objects/Case/fields/DX_Equipment_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>DX_Equipment_Installation_ID__c</fullName>
    <label>Equipment Installation ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>