force-app/main/default/objects/Case/fields/DX_Expected_Storage_Duration__c.field-meta.xml
<CustomField>
    <fullName>DX_Expected_Storage_Duration__c</fullName>
    <inlineHelpText>Storage Fees may apply*</inlineHelpText>
    <label>Expected Storage Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up to 1 week</fullName>
            </value>
            <value>
                <fullName>Up to 1 month</fullName>
            </value>
            <value>
                <fullName>Over 1 month</fullName>
            </value>
            <value>
                <fullName>No Storage: Shipment to be utilized on arrival</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>