force-app/main/default/objects/Case/fields/DX_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_Full_Name__c</fullName>
    <label>Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>