force-app/main/default/objects/Case/fields/DX_Governing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>DX_Governing_Agreement__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;  DX_Service_Order__r.Governing_Agreement__c  , DX_Service_Order__r.Governing_Agreement__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Governing Agreement</label>
    <type>Text</type>
</CustomField>