force-app/main/default/objects/Case/fields/DX_Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>DX_Guest_Email__c</fullName>
    <label>Guest Email</label>
    <type>Email</type>
</CustomField>