force-app/main/default/objects/Case/fields/DX_Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_Guest_Name__c</fullName>
    <label>Guest Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>