force-app/main/default/objects/Case/fields/DX_Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>DX_Guest_Phone__c</fullName>
    <label>Guest Phone</label>
    <type>Phone</type>
</CustomField>