force-app/main/default/objects/Case/fields/DX_How_Help_You__c.field-meta.xml
<CustomField>
    <fullName>DX_How_Help_You__c</fullName>
    <label>Tell us how we can help you:</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>