force-app/main/default/objects/Case/fields/DX_I_Accept__c.field-meta.xml
<CustomField>
    <fullName>DX_I_Accept__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Accept</label>
    <type>Checkbox</type>
</CustomField>