force-app/main/default/objects/Case/fields/DX_I_Agree_Rules_Regulations__c.field-meta.xml
<CustomField>
    <fullName>DX_I_Agree_Rules_Regulations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I Agree Rules &amp; Regulations</label>
    <type>Checkbox</type>
</CustomField>