force-app/main/default/objects/Case/fields/DX_Initial_Term_Expiration__c.field-meta.xml
<CustomField>
    <fullName>DX_Initial_Term_Expiration__c</fullName>
    <formula>IF(
DAY(DX_CRN_Date__c) = 1,
DATE(YEAR(ADDMONTHS(DX_CRN_Date__c, DX_Service_Order__r.Term_Months__c)),
MONTH(ADDMONTHS(DX_CRN_Date__c, DX_Service_Order__r.Term_Months__c)),
1) - 1,
DATE(YEAR(ADDMONTHS(DX_CRN_Date__c, DX_Service_Order__r.Term_Months__c)),
MONTH(ADDMONTHS(DX_CRN_Date__c, DX_Service_Order__r.Term_Months__c)) + 1,
1) - 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Expiration</label>
    <type>Date</type>
</CustomField>