force-app/main/default/objects/Case/fields/DX_Initiator_Phone__c.field-meta.xml
<CustomField>
    <fullName>DX_Initiator_Phone__c</fullName>
    <formula>Contact.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiator Phone</label>
    <type>Text</type>
</CustomField>