force-app/main/default/objects/Case/fields/DX_InitiatorPhone__c.field-meta.xml
<CustomField>
    <fullName>DX_InitiatorPhone__c</fullName>
    <label>Initiator Phone</label>
    <type>Phone</type>
</CustomField>