force-app/main/default/objects/Case/fields/DX_Invoice__c.field-meta.xml
<CustomField>
    <fullName>DX_Invoice__c</fullName>
    <label>Invoice #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>