force-app/main/default/objects/Case/fields/DX_Licensor__c.field-meta.xml
<CustomField>
    <fullName>DX_Licensor__c</fullName>
    <formula>Text(DX_Service_Order__r.Licensor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensor</label>
    <type>Text</type>
</CustomField>