force-app/main/default/objects/Case/fields/DX_Link_Netrality_Customer_Handbook__c.field-meta.xml
<CustomField>
    <fullName>DX_Link_Netrality_Customer_Handbook__c</fullName>
    <label>Link to Netrality Customer Handbook</label>
    <type>Url</type>
</CustomField>