force-app/main/default/objects/Case/fields/DX_LOA_Attached__c.field-meta.xml
<CustomField>
    <fullName>DX_LOA_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOA Attached</label>
    <type>Checkbox</type>
</CustomField>