force-app/main/default/objects/Case/fields/DX_Location__c.field-meta.xml
<CustomField>
    <fullName>DX_Location__c</fullName>
    <formula>text(DX_Opportunity__r.Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>