force-app/main/default/objects/Case/fields/DX_MRIID__c.field-meta.xml
<CustomField>
    <fullName>DX_MRIID__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp;  DX_Service_Order__c  ,  DX_Service_Order__r.DX_MRI_ID__c  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRIID</label>
    <type>Text</type>
</CustomField>