force-app/main/default/objects/Case/fields/DX_New_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_New_Name__c</fullName>
    <label>New Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>