force-app/main/default/objects/Case/fields/DX_NRC_Billing_for__c.field-meta.xml
<CustomField>
    <fullName>DX_NRC_Billing_for__c</fullName>
    <label>NRC Billing for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility Billing</fullName>
            </value>
            <value>
                <fullName>Remote Hands Support</fullName>
            </value>
            <value>
                <fullName>Cross Connect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>