force-app/main/default/objects/Case/fields/DX_Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>DX_Operations_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operations Contact</label>
    <type>Checkbox</type>
</CustomField>