force-app/main/default/objects/Case/fields/DX_Opportunity_closed_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Opportunity_closed_Date__c</fullName>
    <formula>DX_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity closed Date</label>
    <type>Date</type>
</CustomField>