force-app/main/default/objects/Case/fields/DX_Order_Change_Cancel_Cross_Connects__c.field-meta.xml
<CustomField>
    <fullName>DX_Order_Change_Cancel_Cross_Connects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order/Change/ Cancel Cross Connects</label>
    <type>Checkbox</type>
</CustomField>