force-app/main/default/objects/Case/fields/DX_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>DX_Order_Date__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>