force-app/main/default/objects/Case/fields/DX_Order_Initiator__c.field-meta.xml
<CustomField>
    <fullName>DX_Order_Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Initiator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>