force-app/main/default/objects/Case/fields/DX_Other_Courier__c.field-meta.xml
<CustomField>
    <fullName>DX_Other_Courier__c</fullName>
    <label>Other Courier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>