force-app/main/default/objects/Case/fields/DX_Other_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>DX_Other_Document_Type__c</fullName>
    <label>Other Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>