force-app/main/default/objects/Case/fields/DX_Other_Location__c.field-meta.xml
<CustomField>
    <fullName>DX_Other_Location__c</fullName>
    <label>Other Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>