force-app/main/default/objects/Case/fields/DX_Other_NRC_Billing_for__c.field-meta.xml
<CustomField>
    <fullName>DX_Other_NRC_Billing_for__c</fullName>
    <label>Other NRC Billing for</label>
    <length>100</length>
    <type>Text</type>
</CustomField>