force-app/main/default/objects/Case/fields/DX_Other_Request__c.field-meta.xml
<CustomField>
    <fullName>DX_Other_Request__c</fullName>
    <label>Other Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>