force-app/main/default/objects/Case/fields/DX_Packaging_Notes__c.field-meta.xml
<CustomField>
    <fullName>DX_Packaging_Notes__c</fullName>
    <inlineHelpText>Additional fees may apply for packing materials.</inlineHelpText>
    <label>Packaging Notes</label>
    <type>TextArea</type>
</CustomField>