force-app/main/default/objects/Case/fields/DX_Permanent_Access_Badge__c.field-meta.xml
<CustomField>
    <fullName>DX_Permanent_Access_Badge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent Access Badge</label>
    <type>Checkbox</type>
</CustomField>