force-app/main/default/objects/Case/fields/DX_Phone__c.field-meta.xml
<CustomField>
    <fullName>DX_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>