force-app/main/default/objects/Case/fields/DX_Physical_Access__c.field-meta.xml
<CustomField>
    <fullName>DX_Physical_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Access</label>
    <type>Checkbox</type>
</CustomField>