force-app/main/default/objects/Case/fields/DX_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>DX_Pickup_Time__c</fullName>
    <label>Pickup Time</label>
    <type>DateTime</type>
</CustomField>