force-app/main/default/objects/Case/fields/DX_Ports_Order_Initiator__c.field-meta.xml
<CustomField>
    <fullName>DX_Ports_Order_Initiator__c</fullName>
    <label>Ports</label>
    <type>TextArea</type>
</CustomField>