force-app/main/default/objects/Case/fields/DX_Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>DX_Purpose_of_Visit__c</fullName>
    <label>Purpose of the Visit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>