force-app/main/default/objects/Case/fields/DX_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DX_Quantity__c</fullName>
    <inlineHelpText>Total number of packages included in shipment, if multiple.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>