force-app/main/default/objects/Case/fields/DX_Rack_Cage_Location__c.field-meta.xml
<CustomField>
    <fullName>DX_Rack_Cage_Location__c</fullName>
    <label>Rack/Cage Location:</label>
    <length>200</length>
    <type>Text</type>
</CustomField>