force-app/main/default/objects/Case/fields/DX_Rack_RU__c.field-meta.xml
<CustomField>
    <fullName>DX_Rack_RU__c</fullName>
    <label>Rack RU (MMR panel location)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>