force-app/main/default/objects/Case/fields/DX_Reason_For_Hold__c.field-meta.xml
<CustomField>
    <fullName>DX_Reason_For_Hold__c</fullName>
    <label>Reason for Hold</label>
    <length>100</length>
    <type>Text</type>
</CustomField>