force-app/main/default/objects/Case/fields/DX_Related_Assets__c.field-meta.xml
<CustomField>
    <fullName>DX_Related_Assets__c</fullName>
    <label>Related Asset(s)</label>
    <type>TextArea</type>
</CustomField>