force-app/main/default/objects/Case/fields/DX_Related_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>DX_Related_Service_Order__c</fullName>
    <label>Related Service Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>